--- a/test_EBNF.in
+++ b/test_EBNF.in
@@ -1,79 +1,21 @@
-document            ::= prolog element Misc*
-Char                ::= #x9 | #xA | #xD | [#x20-#xD7FF] | [#xE000-#xFFFD] | [#x10000-#x10FFFF]
-S                   ::= (#x20 | #x9 | #xD | #xA)+
-NameStartChar       ::= ":" | [A-Z] | "_" | [a-z] | [#xC0-#xD6] | [#xD8-#xF6] | [#xF8-#x2FF] | [#x370-#x37D] | [#x37F-#x1FFF] | [#x200C-#x200D] | [#x2070-#x218F] | [#x2C00-#x2FEF] | [#x3001-#xD7FF] | [#xF900-#xFDCF] | [#xFDF0-#xFFFD] | [#x10000-#xEFFFF]
-NameChar            ::= NameStartChar | "-" | "." | [0-9] | #xB7 | [#x0300-#x036F] | [#x203F-#x2040]
-Name                ::= NameStartChar (NameChar)*
-Names               ::= Name (#x20 Name)*
-Nmtoken             ::= (NameChar)+
-Nmtokens            ::= Nmtoken (#x20 Nmtoken)*
-EntityValue         ::= '"' ([^%&"] | PEReference | Reference)* '"' |  "'" ([^%&'] | PEReference | Reference)* "'"
-AttValue            ::= '"' ([^<&"] | Reference)* '"' |  "'" ([^<&'] | Reference)* "'"
-SystemLiteral       ::= ('"' [^"]* '"') | ("'" [^']* "'")
-PubidLiteral        ::= '"' PubidChar* '"' | "'" (PubidChar - "'")* "'"
-PubidChar           ::= #x20 | #xD | #xA | [a-zA-Z0-9] | [-'()+,./:=?;!*#@$_%]
-CharData            ::= [^<&]* - ([^<&]* ']]>' [^<&]*)
-Comment             ::= '<!--' ((Char - '-') | ('-' (Char - '-')))* '-->'
-PI                  ::= '<?' PITarget (S (Char* - (Char* '?>' Char*)))? '?>'
-PITarget            ::= Name - (('X' | 'x') ('M' | 'm') ('L' | 'l'))
-CDSect              ::= CDStart CData CDEnd
-CDStart             ::= '<![CDATA['
-CData               ::= (Char* - (Char* ']]>' Char*))
-CDEnd               ::= ']]>'
-prolog              ::= XMLDecl? Misc* (doctypedecl Misc*)?
-XMLDecl             ::= '<?xml' VersionInfo EncodingDecl? SDDecl? S? '?>'
-VersionInfo         ::= S 'version' Eq ("'" VersionNum "'" | '"' VersionNum '"')
-Eq                  ::= S? '=' S?
-VersionNum          ::= '1.' [0-9]+
-Misc                ::= Comment | PI | S
-doctypedecl         ::= '<!DOCTYPE' S Name (S ExternalID)? S? ('[' intSubset ']' S?)? '>'
-DeclSep             ::= PEReference | S
-intSubset           ::= (markupdecl | DeclSep)*
-markupdecl          ::= elementdecl | AttlistDecl | EntityDecl | NotationDecl | PI | Comment
-extSubset           ::= TextDecl? extSubsetDecl
-extSubsetDecl       ::= ( markupdecl | conditionalSect | DeclSep)*
-SDDecl              ::= S 'standalone' Eq (("'" ('yes' | 'no') "'") | ('"' ('yes' | 'no') '"'))
-element             ::= EmptyElemTag | STag content ETag
-STag                ::= '<' Name (S Attribute)* S? '>'
-Attribute           ::= Name Eq AttValue
-ETag                ::= '</' Name S? '>'
-content             ::= CharData? ((element | Reference | CDSect | PI | Comment) CharData?)*
-EmptyElemTag        ::= '<' Name (S Attribute)* S? '/>'
-elementdecl         ::= '<!ELEMENT' S Name S contentspec S? '>'
-contentspec         ::= 'EMPTY' | 'ANY' | Mixed | children
-children            ::= (choice | seq) ('?' | '*' | '+')?
-cp                  ::= (Name | choice | seq) ('?' | '*' | '+')?
-choice              ::= '(' S? cp ( S? '|' S? cp )+ S? ')'
-seq                 ::= '(' S? cp ( S? ',' S? cp )* S? ')'
-Mixed               ::= '(' S? '#PCDATA' (S? '|' S? Name)* S? ')*' | '(' S? '#PCDATA' S? ')'
-AttlistDecl         ::= '<!ATTLIST' S Name AttDef* S? '>'
-AttDef              ::= S Name S AttType S DefaultDecl
-AttType             ::= StringType | TokenizedType | EnumeratedType
-StringType          ::= 'CDATA'
-TokenizedType       ::= 'ID' | 'IDREF' | 'IDREFS' | 'ENTITY' | 'ENTITIES' | 'NMTOKEN' | 'NMTOKENS'
-EnumeratedType      ::= NotationType | Enumeration
-NotationType        ::= 'NOTATION' S '(' S? Name (S? '|' S? Name)* S? ')'
-Enumeration         ::= '(' S? Nmtoken (S? '|' S? Nmtoken)* S? ')'
-DefaultDecl         ::= '#REQUIRED' | '#IMPLIED' | (('#FIXED' S)? AttValue)
-conditionalSect     ::= includeSect | ignoreSect
-includeSect         ::= '<![' S? 'INCLUDE' S? '[' extSubsetDecl ']]>'
-ignoreSect          ::= '<![' S? 'IGNORE' S? '[' ignoreSectContents* ']]>'
-ignoreSectContents  ::= Ignore ('<![' ignoreSectContents ']]>' Ignore)*
-Ignore              ::= Char* - (Char* ('<![' | ']]>') Char*)
-CharRef             ::= '&#' [0-9]+ ';' | '&#x' [0-9a-fA-F]+ ';'
-Reference           ::= EntityRef | CharRef
-EntityRef           ::= '&' Name ';'
-PEReference         ::= '%' Name ';'
-EntityDecl          ::= GEDecl | PEDecl
-GEDecl              ::= '<!ENTITY' S Name S EntityDef S? '>'
-PEDecl              ::= '<!ENTITY' S '%' S Name S PEDef S? '>'
-EntityDef           ::= EntityValue | (ExternalID NDataDecl?)
-PEDef               ::= EntityValue | ExternalID
-ExternalID          ::= 'SYSTEM' S SystemLiteral | 'PUBLIC' S PubidLiteral S SystemLiteral
-NDataDecl           ::= S 'NDATA' S Name
-TextDecl            ::= '<?xml' VersionInfo? EncodingDecl S? '?>'
-extParsedEnt        ::= TextDecl? content
-EncodingDecl        ::= S 'encoding' Eq ('"' EncName '"' | "'" EncName "'" )
-EncName             ::= [A-Za-z] ([A-Za-z0-9._] | '-')*
-NotationDecl        ::= '<!NOTATION' S Name S (ExternalID | PublicID) S? '>'
-PublicID            ::= 'PUBLIC' S PubidLiteral
+<程序> ::= (<声明> | <函数定义>) (<声明> | <函数定义>)*
+<声明> ::= (<变量声明> | <变量定义> | <函数声明>) <空格>?
+<类型声明> ::= <标识符> <空格> <标识符>
+<变量定义> ::= <类型声明> ';'
+<变量声明> ::= 'extern' <空格> <变量声明> ';'
+<函数声明> ::= <类型声明> '(' (<类型声明> (<空格>? ',' <空格>? <类型声明>)*)? ')' ';'
+<函数定义> ::= <类型声明> '(' (<类型声明> (<空格>? ',' <空格>? <类型声明>)*)? ')' <空格>? <语句块> <空格>?
+<语句块> ::= '{' <空格>? (<声明> | <语句> <空格>?)* '}'
+<语句> ::= <if语句> | <while语句> | <return语句> | <表达式> ';'
+<if语句> ::= 'if' <空格>? '(' <表达式> ')' <空格>? (<语句> | <语句块>)
+<while语句> ::= 'while' '(' <表达式> ')' (<语句> | <语句块>)
+<return语句> ::= 'return' <空格>? <表达式>? ';'
+<表达式> ::= <加法表达式> <空格>? (<RelOp> <空格>? <加法表达式>)*
+<RelOp> ::= '<' | '<=' | '>' | '>=' | '==' | '!='
+<加法表达式> ::= <乘法表达式> ([+#x2D] <乘法表达式>)*
+<乘法表达式> ::= <因子> ([*/] <因子>)*
+<因子> ::= <数值> | '(' <表达式> ')' | <变量>
+<数值> ::= [0-9]+ ('l' | 'u' | 'll' | 'ull')?
+<变量> ::= <标识符> ('(' (<表达式> (',' <表达式>)*)? ')')?
+<空格> ::= [#x9#xA#xD#x20]+
+<标识符> ::= [A-Za-z] [0-9A-Za-z_]*
