--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,56 +1,9 @@
 {
+    "terminal.integrated.env.windows": {
+        "PATH": "C:\\MinGW\\bin"
+    },
     "files.associations": {
-        "exception": "cpp",
-        "iterator": "cpp",
-        "system_error": "cpp",
-        "utility": "cpp",
-        "xtr1common": "cpp",
-        "xutility": "cpp",
-        "ctime": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "cwchar": "cpp",
-        "fstream": "cpp",
-        "initializer_list": "cpp",
-        "ios": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "memory": "cpp",
-        "new": "cpp",
-        "ostream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "xfacet": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocinfo": "cpp",
-        "xlocnum": "cpp",
-        "xmemory": "cpp",
-        "xstddef": "cpp",
-        "xstring": "cpp",
-        "vector": "cpp",
-        "xlocbuf": "cpp",
-        "codecvt": "cpp",
-        "iomanip": "cpp",
-        "locale": "cpp",
-        "string": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xloctime": "cpp"
+        "*.inc": "makefile",
+        "xlocale": "cpp"
     }
 }
